# internal/core/dtos/api_dtos.gen.go
@@ -1,0 +1,76 @@
+// Package dto provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
+package dto
+
+// Standard Error response.
+type Error struct {
+	// example: `UNAUTHORIZED`.
+	ErrorType string `json:"error_type"`
+
+	// The detailed reason of the error.
+	Message string `json:"message"`
+
+	// Error name.
+	Name string `json:"name"`
+}
+
+// WordDTO defines model for WordDTO.
+type WordDTO struct {
+	Content string `json:"content"`
+	Key     string `json:"key"`
+}
+
+// WordsPostRequestBody defines model for WordsPostRequestBody.
+type WordsPostRequestBody WordDTO
+
+// GetWordLimitParam defines model for GetWordLimitParam.
+type GetWordLimitParam int
+
+// GetWordOffsetParam defines model for GetWordOffsetParam.
+type GetWordOffsetParam int
+
+// Rules for the search query parameter
+type GetWordSearchParam string
+
+// Standard Error response.
+type BadRequest Error
+
+// Standard Error response.
+type Conflict Error
+
+// Standard Error response.
+type InternalServerError Error
+
+// WordsGetResponse defines model for WordsGetResponse.
+type WordsGetResponse struct {
+	// The total amount of records
+	Cout *int `json:"cout,omitempty"`
+
+	// The list of words
+	Words []WordDTO `json:"words"`
+}
+
+// WordsPostResponse defines model for WordsPostResponse.
+type WordsPostResponse struct {
+	// The id of the created word
+	Id string `json:"id"`
+}
+
+// GetWordsParams defines parameters for GetWords.
+type GetWordsParams struct {
+	// Parameter used to search for a word.
+	Q *GetWordSearchParam `json:"q,omitempty"`
+
+	// Offset pagination parameter. Starts from 0
+	Offset GetWordOffsetParam `json:"offset"`
+
+	// Limit pagination parameter. Starts from 5
+	Limit GetWordLimitParam `json:"limit"`
+}
+
+// PostWordJSONBody defines parameters for PostWord.
+type PostWordJSONBody WordsPostRequestBody
+
+// PostWordJSONRequestBody defines body for PostWord for application/json ContentType.
+type PostWordJSONRequestBody PostWordJSONBody
